# Cillers_Hackathon_Team_Fullsnack

./: polytope.yml
lib/py/readme/: README.md
modules/api/: API_USAGE.md  README.md  polytope.yml  pyproject.toml
modules/api/src/backend/: main.py
modules/api/src/backend/clients/: postgres.py  twilio.py
modules/api/src/backend/conf/: __init__.py
modules/api/src/backend/db/: __init__.py  models.py  utils.py
modules/api/src/backend/init/: __init__.py
modules/api/src/backend/routes/: base.py  utils.py
modules/api/src/backend/utils/: auth.py  env.py  log.py  validation.py
modules/frontend/: README.md  package-lock.json  package.json  polytope.yml
modules/frontend/app/: app.css  root.tsx
modules/frontend/app/lib/: apiClient.ts
modules/frontend/app/routes/: home.tsx
