[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]==0.116.1",
    "psycopg[binary,pool]==3.2.9",
    "pyjwt[cryptography]>=2.10.1",
    "sqlmodel==0.0.24",
    "twilio>=9.0.0",
    "uvicorn[standard]==0.35.0",
]

[project.scripts]
app = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
